package com.yushixin.structure.adapter.object_adapter;

/**
 * 5V电压
 */
public interface IVoltage5V {

    /**
     * 输出5V电压
     */
    int output5V();
}
