@startuml
'https://plantuml.com/class-diagram

'实现
VoltageAdapter ..|> IVoltage5V

'聚合
VoltageAdapter o-- Voltage220V

'依赖
Client ..> Phone
Client ..> VoltageAdapter
Client ..> Voltage220V
Phone ..> IVoltage5V

'客户端
class Client {}

'手机
class Phone {
    +void charging(IVoltage5V:iVoltage5V)
}

'电压适配器
class VoltageAdapter {
    -Voltage220V:voltage220V
    +Voltage220V(Voltage220V:voltage220V)
    +int output5V()
}

'5V电压
interface IVoltage5V {
    +int output5V()
}

'220V电压
class Voltage220V {
    +int output220V()
}
@enduml